<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="name_placeholder_text">Имя</string>
    <string name="breed_placeholder_text">Порода</string>
    <string name="description_placeholder_text">Краткое описание о питомце</string>
    <string name="find_partner_btn_text">Найти партнера</string>
    <string name="matches_text">Мои совпадения</string>
    <string name="image_placeholder_text">Фото вашей собаки</string>
    <string name="image_alert_title">Изменить фотографию</string>
    <string name="image_alert_message">Введите url изображения</string>
    <string name="name_alert_title">Изменить имя</string>
    <string name="name_alert_message">Как вы зовете вашего песика</string>
    <string name="breed_alert_title">Изменить породу</string>
    <string name="breed_alert_message">Введите породу вашей собаки</string>
    <string name="description_alert_title">Изменить описание</string>
    <string name="description_alert_message">Придумайте пару предложений про вашу собаку</string>
    <string name="call_alert_title">Позвонить %1$s?</string>
    <string name="matches_fragment_stub">Пока никто не хочет с вами общаться</string>
    <string name="matches_fragment_title">Ваши любимчики</string>
</resources>