<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/image_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/image_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/image_placeholder_text"
            app:drawableTopCompat="@drawable/ic_pet"
            app:layout_constraintBottom_toBottomOf="@id/main_image"
            app:layout_constraintEnd_toEndOf="@id/main_image"
            app:layout_constraintStart_toStartOf="@id/main_image"
            app:layout_constraintTop_toTopOf="@id/main_image" />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackground"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logout" />

        <TextView
            android:id="@+id/phone_number"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_def"
            android:layout_marginEnd="@dimen/padding_def"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="@+id/name"
            tools:text="+79901234455" />

        <TextView
            android:id="@+id/name"
            style="@style/Text.Primary.Huge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_def"
            android:layout_marginTop="@dimen/padding_def"
            android:drawablePadding="4dp"
            android:text="@string/name_placeholder_text"
            android:textColor="@color/colorTextSecondary"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_edit"
            app:layout_constraintEnd_toStartOf="@id/phone_number"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_image"
            tools:text="Golden Boi" />

        <ImageView
            android:id="@+id/dog_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/padding_def"
            android:layout_marginTop="@dimen/padding_def"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/ic_dog" />

        <TextView
            android:id="@+id/description"
            style="@style/Text.Primary.Big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_def"
            android:layout_marginEnd="@dimen/padding_def"
            android:text="@string/description_placeholder_text"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dog_image"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:text="The goodest boy of all good boys!" />

        <TextView
            android:id="@+id/breed"
            style="@style/Text.Primary.Big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_def"
            android:layout_marginTop="@dimen/padding_small"
            android:drawablePadding="4dp"
            android:text="@string/breed_placeholder_text"
            android:textColor="@color/colorTextSecondary"
            app:drawableEndCompat="@drawable/ic_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:text="Golden Retriever" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/padding_def"
            android:layout_marginTop="@dimen/padding_def"
            android:layout_marginEnd="@dimen/padding_def"
            android:background="@color/colorBorderLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/breed" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/image_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/search_btn"
            style="@style/Button.Accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_big"
            android:text="@string/find_partner_btn_text"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/description_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="description,dog_image" />

        <View
            android:id="@+id/bottom_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/padding_def"
            android:layout_marginTop="@dimen/padding_def"
            android:layout_marginEnd="@dimen/padding_def"
            android:background="@color/colorBorderLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_barrier" />

        <TextView
            android:id="@+id/matches"
            style="@style/Text.Primary.Big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/padding_small"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_def"
            android:text="@string/matches_text"
            app:drawableEndCompat="@drawable/ic_next_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>